# py-ipaplots

./: .gitignore  CLAUDE.md  Justfile  README.md  pyproject.toml
examples/: ipaplots_test.py
examples/stata/: README.md  ipaplots_test.do
src/ipaplots/: __init__.py
src/ipaplots/styles/: ipaplots.mplstyle
