[build-system]
requires = ["uv_build>=0.8.0,<0.9.0"]
build-backend = "uv_build"

[project]
name = "ipaplots"
version = "0.0.1"
authors = [
  { name = "Innovations for Poverty Action", email = "researchsupport@poverty-action.org" },
]
description = "A matplotlib style package for creating IPA-themed plots."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
    "ipykernel>=6.16.2",
    "matplotlib",
    "pandas>=1.1.5",
]

[project.optional-dependencies]
dev = ["pandas", "jupyter", "seaborn"]

[project.urls]
"Homepage" = "https://github.com/PovertyAction/ipaplots"
"Bug Tracker" = "https://github.com/PovertyAction/ipaplots/issues"

[tool.uv.build-backend]
source-include = ["src/ipaplots/styles/*.mplstyle"]
